--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "path-tools",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "common path toolkits, based on Node.js path module",
   "main": "index.js",
   "scripts": {
     "hint": "jscs {*.js,test} & jshint . --exclude-path .gitignore",
     "mocha": "mocha 'test/**/*.test.js' --report spec --harmony",
-    "cov": "node --harmony node_modules/.bin/istanbul cover --report html ./node_modules/mocha/bin/_mocha -- 'test/**/*.test.js' --harmony --reporter list ",
+    "cov": "node --harmony node_modules/.bin/istanbul cover --report html ./node_modules/mocha/bin/_mocha -- 'test/**/*.test.js' --harmony --reporter dot ",
     "test": "jscs {*.js,test} & jshint . --exclude-path .gitignore && node --harmony node_modules/.bin/istanbul cover --report html ./node_modules/mocha/bin/_mocha -- 'test/**/*.test.js' --harmony --reporter dot "
   },
   "repository": {
@@ -29,10 +29,10 @@
     "jscs": "*",
     "jshint": "*",
     "mocha": "*",
-    "mocha": "*",
+    "rewire": "*",
     "sinon": "*"
   },
   "dependencies": {
-    "args-expect": "~0.2.1"
+    "args-expect": "0.2.1"
   }
 }
